# passport-desktop

./: .gitignore  .npmignore  .prettierignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  lint.yml  pages.yml  publish.yml
__test__/: index.spec.ts
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/node/: key_creation_option.rs  mod.rs  passport.rs  public_key_encoding.rs  verification_result.rs
src/util/: errors.rs  macros.rs  mappers.rs  mod.rs  traits.rs
src/win/: mod.rs  passport.rs
ts-src/: dummies.ts  index.ts
