[package]
edition = "2021"
name = "passport-desktop"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.13.2", default-features = false, features = ["napi4", "napi6", "tokio_rt"] }
napi-derive = "2.13.0"
tokio = "1.29.1"
futures = "0.3.28"

[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"
windows = { version = "0.48.0", features = [
    "Foundation",
    "Security_Credentials_UI",
    "Security_Cryptography",
    "Security_Cryptography_Core",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
